--- a/1-simple-ws-server/package.json
+++ b/1-simple-ws-server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tsc -b && node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,7 @@
     "@types/express": "^4.17.20",
     "@types/ws": "^8.5.8",
     "express": "^4.18.2",
+    "typescript": "^5.7.3",
     "ws": "^8.14.2"
   }
 }
